authservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-deployment
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: rosaauth
        image: rpwtouk/rosaauth:v1.0.0
        ports:
        - containerPort: 80
