frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: rosafront
        # image: k8s.gcr.io/echoserver:1.4
        image: rpwtouk/rosafront:v0.0.6
        ports:
        - containerPort: 80
