payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: rosapayment
        image: rpwtouk/rosapayment:v0.0.1
        ports:
        - containerPort: 80
