taskservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskservice-deployment
  labels:
    app: taskservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskservice
  template:
    metadata:
      labels:
        app: taskservice
    spec:
      containers:
      - name: rosascheduler
        image: rpwtouk/rosascheduler:v0.0.3
        ports:
        - containerPort: 80
