authservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice-service
spec:
  type: NodePort
  selector:
    app: authservice
  ports:
    - port: 80
      targetPort: 80
