payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: NodePort
  selector:
    app: payment
  ports:
  - port: 80
    targetPort: 80
