teskservice-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: taskservice-service
spec:
        type: NodePort
        selector:
                app: taskservice
        ports:
                - port: 80
                  targetPort: 80
