userdb-service.yml
# Headless service for stable DNS entries of StatefulSet members.
apiVersion: v1
kind: Service
metadata:
  name: userdb
  labels:
    app: userdb
spec:
  ports:
  - name: userdb
    port: 3306
  clusterIP: None
  selector:
    app: userdb
---
# Client service for connecting to any MySQL instance for reads.
# For writes, you must instead connect to the master: userdb-0.userdb.
apiVersion: v1
kind: Service
metadata:
  name: userdb-read
  labels:
    app: userdb
spec:
  ports:
  - name: userdb
    port: 3306
  selector:
    app: userdb
